--- a/ProxiJob/app/src/main/res/layout/activity_login.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background"
     android:orientation="vertical"
-    android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
@@ -18,6 +17,7 @@
         android:layout_height="400dp">
 
         <ImageView
+            android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/logo_proxijob" />
