--- a/ProxiJob/app/src/main/res/layout/activity_missions_fragment.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_missions_fragment.xml
@@ -9,6 +9,7 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/info"
         android:layout_marginTop="10dp"
@@ -20,38 +21,36 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="30dp"/>
-    <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/main_swipe"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:layout_below="@+id/info">
 
     <com.baoyz.swipemenulistview.SwipeMenuListView
         android:id="@+id/listView"
+        android:layout_below="@id/info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/avenirltstd_medium"
         />
-    </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp">
+
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/menu_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             />
+
+    </com.github.clans.fab.FloatingActionMenu>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center">
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:fontFamily="@font/avenirltstd_medium"
-            android:layout_margin="16dp"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:foregroundGravity="center"
-            android:src="@drawable/plus"
-            app:backgroundTint="@color/proxi_button_purple"
-            app:rippleColor="@color/proxi_button_purple" />
 
         <TextView
             android:id="@+id/noMissions"
@@ -64,5 +63,12 @@
             android:textColor="@color/proxi_button_purple"
             android:textSize="20dp" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="bottom">
+
+    </LinearLayout>
+
 </RelativeLayout>
 </FrameLayout>
