--- a/ProxiJob/app/src/main/res/layout/custom_infowindow.xml
+++ b/ProxiJob/app/src/main/res/layout/custom_infowindow.xml
@@ -91,7 +91,8 @@
             android:text="Description de la mission"
             android:textColor="@color/proxi_button_purple"
             android:textSize="12dip"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:ignore="NotSibling"/>
 
         <ScrollView
             android:layout_width="wrap_content"
