--- a/ProxiJob/app/src/debug/res/values/google_maps_api.xml
+++ b/ProxiJob/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,6 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCXquuNSj_hKuSDokzjSp_AbidWtWsryY0</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyChHsm65dfSRg1k52yLz2oEYXBd7C-XsSI</string>
+    <!--AIzaSyCXquuNSj_hKuSDokzjSp_AbidWtWsryY0-->
 </resources>
