--- a/ProxiJob/app/src/main/res/layout/activity_login.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_login.xml
@@ -43,6 +43,20 @@
                 android:backgroundTint="@color/colorWhite"
                 android:fontFamily="@font/avenirltstd_medium"/>
         </android.support.design.widget.TextInputLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_below="@+id/ident">
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/avi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:indicatorName="BallPulseIndicator"
+            android:foregroundGravity="center"
+            android:visibility="gone"
+            />
+    </LinearLayout>
         <android.support.design.widget.TextInputLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
