--- a/ProxiJob/app/src/main/res/layout/custom_list_view_item_missions.xml
+++ b/ProxiJob/app/src/main/res/layout/custom_list_view_item_missions.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/normal_item">
 
     <ImageView
         android:id="@+id/imgAvatar"
