--- a/ProxiJob/app/src/main/res/layout/custom_list_view_item_missions_comp.xml
+++ b/ProxiJob/app/src/main/res/layout/custom_list_view_item_missions_comp.xml
@@ -2,7 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/normal_item"
+    android:paddingBottom="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp">
 
     <ImageView
         android:id="@+id/imgAvatar"
