--- a/ProxiJob/app/src/main/res/layout/fragment_informations_company.xml
+++ b/ProxiJob/app/src/main/res/layout/fragment_informations_company.xml
@@ -1,202 +1,257 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_centerVertical="true">
     <TextView
-        android:layout_marginTop="10dp"
         android:id="@+id/title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_margin"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="Mon Profil"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
+        android:textSize="22sp"
         android:textStyle="bold"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:textSize="30sp"
-        android:text="Mon Profil"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:gravity="center">
     <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:src="@drawable/proxijob"
         android:fontFamily="@font/avenirltstd_medium"
-        app:civ_border_width="7dp"
-        android:layout_marginTop="15dp"
-        app:civ_border_color="@color/proxi_button_purple"/>
-    </RelativeLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:src="@drawable/proxijob"
+        app:civ_border_color="@color/proxi_button_purple"
+        app:civ_border_width="3dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title"/>
+
     <EditText
         android:id="@+id/company_name"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:layout_below="@id/profile_image"
-        android:textColor="@color/proxi_button_purple"
-        android:textStyle="bold"
-        android:textSize="30sp"
         android:layout_gravity="center"
-        android:text="TextView"/>
-    </LinearLayout>
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/proxi_button_purple"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/profile_image"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
     <EditText
         android:id="@+id/company_type"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:textAlignment="center"
-        android:textColor="@color/proxi_button_purple"
-        android:textStyle="bold"
-        android:textSize="25sp"
         android:layout_gravity="center"
-        android:text="TextView"/>
+        android:background="@android:color/transparent"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/proxi_purple_light"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/company_name" />
+
     <View
+        android:id="@+id/line"
         android:layout_marginTop="10dp"
         android:layout_width="250dp"
         android:layout_height="2dp"
         android:layout_gravity="center"
-        android:background="@color/colorPrimaryDark"/>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:background="@color/colorPrimaryDark"
+        android:textColor="@color/proxi_purple_light"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/company_type" />
+
     <TextView
         android:id="@+id/descriptionT"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/avenirltstd_medium"
-        android:textAlignment="center"
-        android:textColor="@color/proxi_button_purple"
+        android:text="DESCRIPTION"
+        android:textColor="@color/proxi_purple_light"
+        android:textSize="15sp"
         android:textStyle="bold"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="20dp"
-        android:textSize="20sp"
-        android:text="DESCRIPTION"/>
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintTop_toBottomOf="@id/line" />
+
     <EditText
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:fontFamily="@font/avenirltstd_medium"
-        android:textAlignment="center"
-        android:layout_below="@id/descriptionT"
+        android:inputType="textMultiLine"
+        android:text="TextView"
+        android:ellipsize="end"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
         android:textColor="@color/proxi_button_purple"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:inputType="text"
-        android:text="TextView"/>
+        app:layout_constraintTop_toBottomOf="@id/descriptionT"/>
+
+    <TextView
+        android:id="@+id/informationsT"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="INFORMATIONS"
+        android:textColor="@color/proxi_purple_light"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintTop_toBottomOf="@id/description" />
+
     <TextView
         android:id="@+id/nb_siretT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/avenirltstd_medium"
+        android:text="N°SIRET"
         android:textAlignment="center"
-        android:layout_below="@id/description"
         android:textColor="@color/proxi_button_purple"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
         android:textSize="20sp"
-        android:text="N°SIRET"/>
+        android:layout_marginLeft="15dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/informationsT"
+        app:layout_constraintBottom_toTopOf="@id/nb_telephoneT"/>
+
     <EditText
         android:id="@+id/nb_siret"
         android:layout_width="wrap_content"
-        android:fontFamily="@font/avenirltstd_medium"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_below="@id/nb_siretT"
-        android:textColor="@color/proxi_button_purple"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/avenirltstd_medium"
         android:inputType="number"
-        android:text="TextView"/>
+        android:text="TextView"
+        android:textAlignment="center"
+        android:layout_marginLeft="100dp"
+        android:textColor="@color/proxi_button_purple"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/informationsT"
+        app:layout_constraintBottom_toTopOf="@id/nb_telephone"/>
+
     <TextView
         android:id="@+id/nb_telephoneT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/avenirltstd_medium"
+        android:text="N°Telephone"
         android:textAlignment="center"
-        android:layout_toRightOf="@id/nb_siretT"
-        android:layout_below="@id/description"
         android:textColor="@color/proxi_button_purple"
-        android:layout_marginLeft="80dp"
-
         android:textSize="20sp"
-        android:text="N°Telephone"/>
+        android:layout_marginLeft="15dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/emailT"
+        app:layout_constraintBottom_toTopOf="@id/nb_siretT"/>
+
     <EditText
         android:id="@+id/nb_telephone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:fontFamily="@font/avenirltstd_medium"
-        android:layout_below="@id/nb_telephoneT"
-        android:layout_alignLeft="@id/nb_telephoneT"
+        android:inputType="phone"
+        android:text="TextView"
+        android:layout_marginLeft="100dp"
         android:textColor="@color/proxi_button_purple"
-        android:layout_marginRight="20dp"
-        android:inputType="number"
-        android:text="TextView"/>
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nb_siret"
+        app:layout_constraintBottom_toTopOf="@id/email"/>
+
     <TextView
         android:id="@+id/emailT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/avenirltstd_medium"
+        android:text="Email"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
-        android:layout_marginLeft="40dp"
-        android:layout_below="@id/nb_telephone"
         android:textSize="20sp"
-        android:text="Email"/>
+        android:layout_marginLeft="15dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nb_telephoneT"
+        app:layout_constraintBottom_toTopOf="@id/adresseT"/>
+
     <EditText
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:fontFamily="@font/avenirltstd_medium"
-        android:textAlignment="center"
-        android:textColor="@color/proxi_button_purple"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="20dp"
-        android:layout_below="@id/emailT"
         android:inputType="textEmailAddress"
-        android:text="TextView"/>
+        android:text="TextView"
+        android:textAlignment="center"
+        android:layout_marginLeft="100dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nb_telephoneT"
+        app:layout_constraintBottom_toTopOf="@id/adresseT"/>
+
     <TextView
         android:id="@+id/adresseT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/avenirltstd_medium"
+        android:text="Adresse"
         android:textAlignment="center"
+        android:layout_marginBottom="10dp"
         android:textColor="@color/proxi_button_purple"
-        android:layout_toRightOf="@id/emailT"
-        android:layout_below="@id/nb_telephone"
-        android:layout_alignLeft="@id/nb_telephone"
         android:textSize="20sp"
-        android:text="Adresse"/>
+        android:layout_marginLeft="15dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/emailT"
+        app:layout_constraintTop_toBottomOf="@id/edit"/>
+
     <EditText
         android:id="@+id/adresse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:fontFamily="@font/avenirltstd_medium"
+        android:text="TextView"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
-        android:layout_below="@id/adresseT"
-        android:layout_alignLeft="@id/adresseT"
-        android:layout_marginRight="20dp"
-        android:text="TextView"/>
-    </RelativeLayout>
+        android:layout_marginLeft="100dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edit"
+        app:layout_constraintBottom_toTopOf="@id/emailT"/>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/edit"
-        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
+        android:layout_centerVertical="true"
+        android:background="@color/proxi_button_purple"
+        android:src="@drawable/plus"
         android:text="Button"
         android:textAllCaps="true"
+        android:textColor="@color/colorWhite"
         android:textSize="15dp"
-        android:src="@drawable/plus"
-        android:background="@color/proxi_button_purple"
-        android:textColor="@color/colorWhite"/>
-</LinearLayout>
+        android:layout_marginTop="7dp"
+        app:layout_constraintTop_toBottomOf="@id/adresseT"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+</android.support.constraint.ConstraintLayout>
