--- a/ProxiJob/app/src/main/res/layout/activity_details_mission.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_details_mission.xml
@@ -28,7 +28,7 @@
             android:layout_marginStart="30dp"
             android:padding="5dp"
             android:background="@drawable/imageview_border"
-            android:src="@drawable/background"/>
+            android:src="@drawable/proxijob"/>
     </RelativeLayout>
 
     <RelativeLayout
