[*] responsive button on profile view

--- a/ProxiJob/app/src/main/res/layout/activity_profil.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_profil.xml
@@ -1,67 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+    <!--<LinearLayout-->
+    <!--android:layout_width="fill_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:gravity="center_horizontal"-->
+    <!--android:orientation="vertical">-->
     <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:paddingTop="30dp"
-        android:paddingBottom="30dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
         android:id="@+id/informations"
-        android:src="@drawable/infos"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
         android:background="@color/proxi_button_green"
-        android:text="Mes informations"
-        android:textColor="@color/colorWhite"
         android:drawableTop="@drawable/my_informations2"
-        android:textAllCaps="false"
-        android:textSize="20sp"/>
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:paddingBottom="30dp"
         android:paddingTop="30dp"
+        android:src="@drawable/infos"
+        android:text="Mes informations"
+        android:textAllCaps="false"
+        android:textColor="@color/colorWhite"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/cv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
-        android:paddingBottom="30dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:id="@+id/cv"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:background="@color/proxi_button_purple"
-        android:src="@drawable/cv"
-        android:layout_below="@id/informations"
-        android:text="Mon C.V."
-        android:drawableTop="@drawable/my_cv2"
-        android:textAllCaps="false"
-        android:textAlignment="gravity"
-        android:textColor="@color/colorWhite"
-        android:textSize="20sp"/>
     <Button
+        android:id="@+id/cv"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+
+        android:layout_below="@id/informations"
+        android:layout_marginEnd="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginStart="5dp"
+        android:background="@color/proxi_button_purple"
+        android:drawableTop="@drawable/my_cv2"
+        android:fontFamily="@font/avenirltstd_medium"
         android:paddingBottom="30dp"
         android:paddingTop="30dp"
-        android:fontFamily="@font/avenirltstd_medium"
-        android:layout_below="@id/cv"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:background="@color/proxi_purple_light"
-        android:src="@drawable/reco"
-        android:id="@+id/recommandations"
-        android:text="Mes recommandations"
-        android:textColor="@color/colorWhite"
-        android:drawableTop="@drawable/my_recommendation"
+        android:src="@drawable/cv"
+        android:text="Mon C.V."
+        android:textAlignment="gravity"
         android:textAllCaps="false"
-        android:textSize="20sp"/>
-    </LinearLayout>
-</LinearLayout>
+        android:textColor="@color/colorWhite"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/recommandations"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/informations" />
+
+    <Button
+        android:id="@+id/recommandations"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/cv"
+        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/proxi_purple_light"
+        android:drawableTop="@drawable/my_recommendation"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:paddingBottom="30dp"
+        android:paddingTop="30dp"
+        android:src="@drawable/reco"
+        android:text="Mes recommandations"
+        android:textAllCaps="false"
+        android:textColor="@color/colorWhite"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cv" />
+    <!--</LinearLayout>-->
+</android.support.constraint.ConstraintLayout>
