--- a/ProxiJob/app/src/main/res/layout/activity_informations_client.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_informations_client.xml
@@ -1,112 +1,286 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    tools:layout_alignParentStart="true"
-    tools:layout_alignParentTop="true">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_centerVertical="true">
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_margin"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="Mon Profil"
+        android:textAlignment="center"
+        android:textColor="@color/proxi_button_purple"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:src="@drawable/proxijob"
+        app:civ_border_color="@color/proxi_button_purple"
+        app:civ_border_width="3dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="center">
-        <TextView
-            android:id="@+id/Inscription"
-            android:textSize="30sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:fontFamily="@font/avenirltstd_medium"
-            android:layout_alignParentTop="true"
-            android:text="Mes informations"
-            android:textAlignment="center"
-            android:textColor="@color/proxi_button_purple">
-        </TextView>
-    </RelativeLayout>
+    <View
+        android:id="@+id/line"
+        android:layout_marginTop="10dp"
+        android:layout_width="250dp"
+        android:layout_height="2dp"
+        android:layout_gravity="center"
+        android:background="@color/colorPrimaryDark"
+        android:textColor="@color/proxi_purple_light"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profile_image" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/lastname"
-            android:layout_width="match_parent"
-            android:fontFamily="@font/avenirltstd_medium"
-            android:layout_height="wrap_content"
-            android:hint="Nom"
-            android:layout_margin="10dp"
-            android:background="@null"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:inputType="text"
-            android:textColorHint="@color/colorPrimaryDark"
-            android:backgroundTint="@color/colorWhite"/>
-        <EditText
-            android:layout_below="@+id/lastname"
-            android:id="@+id/firstname"
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:fontFamily="@font/avenirltstd_medium"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:inputType="text"
-            android:textColorHint="@color/colorPrimaryDark"
+    <TextView
+        android:id="@+id/informationsT"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="INFORMATIONS"
+        android:textColor="@color/proxi_purple_light"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintTop_toBottomOf="@id/line" />
 
-            android:hint="Prénom"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:backgroundTint="@color/colorWhite"/>
+    <TextView
+        android:id="@+id/lastnameT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="Nom"
+        android:textAlignment="center"
+        android:textColor="@color/proxi_button_purple"
+        android:textSize="20sp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/informationsT"
+        app:layout_constraintBottom_toTopOf="@id/nb_telephoneT"/>
 
-        <EditText
-            android:layout_below="@+id/firstname"
-            android:id="@+id/layoutDate"
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:fontFamily="@font/avenirltstd_medium"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:textColorHint="@color/colorPrimaryDark"
+    <EditText
+        android:id="@+id/lastname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:inputType="number"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/proxi_button_purple"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/informationsT"
+        app:layout_constraintBottom_toTopOf="@id/nb_telephone"/>
 
-            android:hint="Date de naissance"
-            android:clickable="true"
-            android:inputType="date"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:backgroundTint="@color/colorWhite"/>
+    <TextView
+        android:id="@+id/firstnameT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="Prénom"
+        android:textAlignment="center"
+        android:textColor="@color/proxi_button_purple"
+        android:textSize="20sp"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/emailT"
+        app:layout_constraintBottom_toTopOf="@id/lastnameT"/>
 
-        <EditText
-            android:layout_below="@+id/layoutDate"
-            android:id="@+id/mail"
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:fontFamily="@font/avenirltstd_medium"
-            android:layout_height="wrap_content"
-            android:hint="Email"
-            android:textColorHint="@color/colorPrimaryDark"
-            android:inputType="textEmailAddress"
-            android:background="@null"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:backgroundTint="@color/colorWhite"/>
+    <EditText
+        android:id="@+id/firstname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:inputType="phone"
+        android:text="TextView"
+        android:layout_marginLeft="100dp"
+        android:textColor="@color/proxi_button_purple"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lastname"
+        app:layout_constraintBottom_toTopOf="@id/email"/>
 
-        <Button
-            android:id="@+id/Valider"
-            android:layout_width="196dp"
-            android:layout_height="52dp"
-            android:layout_centerHorizontal="true"
-            android:fontFamily="@font/avenirltstd_medium"
-            android:layout_gravity="center"
-            android:layout_marginTop="26dp"
-            android:layout_below="@id/mail"
-            android:background="@color/proxi_button_green"
-            android:text="Valider"
-            android:textColor="@color/proxi_back"
-            android:textSize="12sp" />
-    </RelativeLayout>
-</LinearLayout>
+    <TextView
+        android:id="@+id/emailT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="Email"
+        android:textAlignment="center"
+        android:textColor="@color/proxi_button_purple"
+        android:textSize="20sp"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/firstnameT"
+        app:layout_constraintBottom_toTopOf="@id/adresseT"/>
+
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:inputType="textEmailAddress"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:layout_marginLeft="100dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/firstnameT"
+        app:layout_constraintBottom_toTopOf="@id/adresseT"/>
+
+    <TextView
+        android:id="@+id/adresseT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="Adresse"
+        android:textAlignment="center"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/proxi_button_purple"
+        android:textSize="20sp"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/nb_secuT"
+        app:layout_constraintTop_toBottomOf="@id/emailT"/>
+
+    <TextView
+        android:id="@+id/adresse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textColor="@color/proxi_button_purple"
+        android:layout_marginLeft="100dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/emailT"
+        app:layout_constraintBottom_toTopOf="@id/nb_secuT"/>
+
+    <TextView
+        android:id="@+id/nb_secuT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="N° SECO"
+        android:textAlignment="center"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/proxi_button_purple"
+        android:textSize="20sp"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/birthdayT"
+        app:layout_constraintTop_toBottomOf="@id/adresseT"/>
+
+    <EditText
+        android:id="@+id/nb_secu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/proxi_button_purple"
+        android:layout_marginLeft="100dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/adresseT"
+        app:layout_constraintBottom_toTopOf="@id/birthdayT"/>
+
+    <TextView
+        android:id="@+id/birthdayT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="Date de Naissance"
+        android:textAlignment="center"
+        android:textColor="@color/proxi_button_purple"
+        android:textSize="20sp"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nb_secuT"
+        app:layout_constraintBottom_toTopOf="@id/telephoneT"/>
+
+    <EditText
+        android:id="@+id/birthday"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/proxi_button_purple"
+        android:layout_marginLeft="100dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/telephoneT"
+        app:layout_constraintBottom_toTopOf="@id/nb_secuT"/>
+
+    <TextView
+        android:id="@+id/telephoneT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="N° Téléphone"
+        android:textAlignment="center"
+        android:textColor="@color/proxi_button_purple"
+        android:textSize="20sp"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/edit"
+        app:layout_constraintTop_toBottomOf="@id/birthdayT"/>
+
+    <EditText
+        android:id="@+id/telephone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/proxi_button_purple"
+        android:layout_marginLeft="100dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edit"
+        app:layout_constraintBottom_toTopOf="@id/birthdayT"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@color/proxi_button_purple"
+        android:src="@drawable/plus"
+        android:text="Button"
+        android:textAllCaps="true"
+        android:textColor="@color/colorWhite"
+        android:textSize="15dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@id/telephoneT"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+</android.support.constraint.ConstraintLayout>
