--- a/ProxiJob/app/src/main/res/layout/fragment_informations_company.xml
+++ b/ProxiJob/app/src/main/res/layout/fragment_informations_company.xml
@@ -244,10 +244,12 @@
         android:textSize="18sp"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
-        android:layout_marginLeft="100dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginBottom="10dp"
+        android:maxLength="20"
+        android:ellipsize="end"
         app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="@id/adresseT"
         app:layout_constraintTop_toBottomOf="@id/edit"
         app:layout_constraintBottom_toTopOf="@id/emailT"/>
 
