--- a/ProxiJob/app/src/main/res/layout/activity_map_informations_details.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_map_informations_details.xml
@@ -153,10 +153,29 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:layout_gravity="center"
         android:text="Button"
         android:textAllCaps="true"
         android:textSize="15dp"
+        android:background="@color/proxi_button_purple"
+        android:textColor="@color/colorWhite"/>
+    <Button
+        android:id="@+id/contract"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_width="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:text="Signer le contrat"
+        android:textAllCaps="true"
+        android:textSize="15dp"
+        android:visibility="invisible"
         android:background="@color/proxi_button_purple"
         android:textColor="@color/colorWhite"/>
 </LinearLayout>
