Check if user data are set or not and set default value if not + correct bug with editext type

--- a/ProxiJob/app/src/main/res/layout/activity_informations_client.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_informations_client.xml
@@ -79,8 +79,8 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:fontFamily="@font/avenirltstd_medium"
-        android:inputType="number"
-        android:text="TextView"
+        android:inputType="text"
+        android:text="Non renseigné"
         android:textAlignment="center"
         android:layout_marginLeft="100dp"
         android:layout_marginTop="10dp"
@@ -110,8 +110,8 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:fontFamily="@font/avenirltstd_medium"
-        android:inputType="phone"
-        android:text="TextView"
+        android:inputType="text"
+        android:text="Non renseigné"
         android:layout_marginLeft="100dp"
         android:textColor="@color/proxi_button_purple"
         app:layout_constraintLeft_toRightOf="parent"
@@ -138,9 +138,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
+        android:textColor="@color/proxi_button_purple"
         android:fontFamily="@font/avenirltstd_medium"
         android:inputType="textEmailAddress"
-        android:text="TextView"
+        android:text="Non renseigné"
         android:textAlignment="center"
         android:layout_marginLeft="100dp"
         app:layout_constraintLeft_toRightOf="parent"
@@ -170,7 +171,8 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:fontFamily="@font/avenirltstd_medium"
-        android:text="TextView"
+        android:text="Non renseigné"
+        android:inputType="textPostalAddress"
         android:textAlignment="center"
         android:textSize="18sp"
         android:textColor="@color/proxi_button_purple"
@@ -185,7 +187,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/avenirltstd_medium"
-        android:text="N° SECO"
+        android:text="N° SS"
         android:textAlignment="center"
         android:layout_marginBottom="10dp"
         android:textColor="@color/proxi_button_purple"
@@ -201,10 +203,11 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:fontFamily="@font/avenirltstd_medium"
-        android:text="TextView"
+        android:text="Non renseigné"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:layout_marginLeft="100dp"
+        android:inputType="number"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/adresseT"
@@ -231,7 +234,8 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:fontFamily="@font/avenirltstd_medium"
-        android:text="TextView"
+        android:text="Non renseigné"
+        android:inputType="date"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:layout_marginLeft="100dp"
@@ -260,7 +264,8 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:fontFamily="@font/avenirltstd_medium"
-        android:text="TextView"
+        android:text="Non renseigné"
+        android:inputType="phone"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:layout_marginLeft="100dp"
