--- a/ProxiJob/app/src/main/res/layout/fragment_informations_company.xml
+++ b/ProxiJob/app/src/main/res/layout/fragment_informations_company.xml
@@ -108,6 +108,7 @@
         android:scrollbarStyle="insideInset"
         android:scrollbars="vertical"
         android:maxLines="1"
+        android:textSize="18sp"
         android:isScrollContainer="true"
         android:inputType="textMultiLine"
         android:enabled="true"
