--- a/ProxiJob/app/src/main/res/layout/activity_details_mission.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_details_mission.xml
@@ -47,12 +47,15 @@
             android:textAllCaps="true"
             android:textSize="15dp"
             android:textColor="@color/proxi_button_purple"/>
-        <EditText
+        <TextView
             android:id="@+id/job_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/avenirltstd_medium"
             android:layout_below="@id/job_startTW"
+
+            android:textColor="@color/proxi_button_purple"
+            android:textSize="15dp"
             android:layout_marginTop="10dp" />
         <TextView
             android:id="@+id/job_endTW"
@@ -65,12 +68,14 @@
             android:textSize="15dp"
             android:textColor="@color/proxi_button_purple"
             android:text="Fin" />
-        <EditText
+        <TextView
             android:id="@+id/job_end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/job_endTW"
             android:layout_alignLeft="@+id/job_endTW"
+            android:textColor="@color/proxi_button_purple"
+            android:textSize="15dp"
             android:fontFamily="@font/avenirltstd_medium"
             android:layout_marginTop="10dp" />
         <TextView
@@ -92,6 +97,8 @@
             android:layout_below="@id/job_titleTW"
             android:fontFamily="@font/avenirltstd_medium"
             android:layout_alignLeft="@+id/company_image"
+            android:background="@android:color/transparent"
+            android:textSize="15dp"
             android:layout_marginTop="10dp"
             />
         <TextView
@@ -112,10 +119,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/job_cashTW"
+            android:background="@android:color/transparent"
             android:fontFamily="@font/avenirltstd_medium"
             android:layout_alignLeft="@+id/job_cashTW"
             android:layout_marginTop="10dp"
-            />
+            android:textSize="15dp"
+            android:inputType="number" />
         <TextView
             android:id="@+id/job_detailTW"
             android:layout_width="wrap_content"
@@ -136,8 +145,10 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/avenirltstd_medium"
             android:layout_alignLeft="@id/company_image"
+            android:background="@android:color/transparent"
             android:layout_below="@id/job_detailTW"
             android:layout_marginTop="10dp"
+            android:textSize="15dp"
             tools:ignore="NotSibling" />
     </RelativeLayout>
 
